fix: audiosr enhance endpoint errors
